--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -349,10 +349,10 @@ input {
         <span>Password</span>
         <input type="password" id="password-up"/>
       </label>
-      <label>
+      <!-- <label>
         <img id = 'ccap' src="/verificationCode/1" class='form-control-ccap wow fadeInUp' alt="刷新" data-wow-delay='.8s' class="verCodePic" required>
         <input type="text" id="ccapcode"/>
-      </label>
+      </label> -->
       <button type="button" class="submit" id="signup">Sign Up</button>
     </div>
   </div>
