--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>登录/注册表单转换-jq22.com</title>
+<title>登录注册</title>
 <link rel='stylesheet' type='text/css' href='css/toastr.min.css' >
 <script src="js/jquery-3.1.1.min.js"></script>
 <style>
