--- a/views/category.ejs
+++ b/views/category.ejs
@@ -103,15 +103,15 @@
                               </li>
 
                               <li class="navbar-right hidden-xs">
-                                  <form class="navbar-form" role="search">
-                                      <div class="form-group">
-                                          <input type="text" class="form-control" placeholder="Search">
-                                      </div>
-                                      <button type="submit" class="btn btn-search">
-                                          <i class="icon-search"></i>
-                                          <br/>Search
-                                      </button>
-                                  </form>
+                                <form class="navbar-form" role="search" action="/search" method="get">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Search" name="search">
+                                    </div>
+                                    <button type="submit" class="btn btn-search">
+                                        <i class="icon-search"></i>
+                                        <br/>Search
+                                    </button>
+                                </form>
                               </li>
                           </ul>
                       </nav>
@@ -276,7 +276,7 @@
           while (newsNum<typenews.length) {
             $('#Typenews').append(`<div class='row' id='row${++rowNum}'></div>`);
             for(var i=0;i<4;i++){
-                addSmallBlock("row"+rowNum,typenews[newsNum+i]);
+                addSmallBlock("row"+rowNum,typenews[newsNum]);
                 newsNum++;
                 if(newsNum==typenews.length){
                   break;
