--- a/views/index.ejs
+++ b/views/index.ejs
@@ -131,7 +131,7 @@
                             <img src="updata/images/<%= Timenews[0].name%>.jpeg" alt="main img" class="tab-pane__img">
                             <div class="header_news_text tab-pane__block">
                                 <p class="tab-pane__category yel_line"><%=typeList[(Timenews[0].type-1)] %></p>
-                                <a class="tab-pane__title"><%= Timenews[0].name%></a>
+                                <a class="tab-pane__title" href="/news?name=<%= Timenews[0].name%>" ><%= Timenews[0].name%></a>
                                 <p class="tab-pane__text"> </p>
                             </div>
                         </div>
@@ -139,7 +139,7 @@
                             <img src="updata/images/<%= Timenews[1].name%>.jpeg" alt="main img" class="tab-pane__img">
                             <div class="header_news_text tab-pane__block">
                                 <p class="tab-pane__category yel_line"><%=typeList[(Timenews[1].type-1)] %></p>
-                                <a class="tab-pane__title"><%= Timenews[1].name%></a>
+                                <a class="tab-pane__title" href="/news?name=<%= Timenews[1].name%>"><%= Timenews[1].name%></a>
                                 <p class="tab-pane__text"> </p>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                             <img src="updata/images/<%= Timenews[2].name%>.jpeg" alt="main img" class="tab-pane__img">
                             <div class="header_news_text tab-pane__block">
                                 <p class="tab-pane__category yel_line"><%=typeList[(Timenews[2].type-1)] %></p>
-                                <a class="tab-pane__title"><%= Timenews[2].name%></a>
+                                <a class="tab-pane__title" href="/news?name=<%= Timenews[2].name%>"><%= Timenews[2].name%></a>
                                 <p class="tab-pane__text"> </p>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                             <img src="updata/images/<%= Timenews[3].name%>.jpeg" alt="main img" class="tab-pane__img">
                             <div class="header_news_text tab-pane__block">
                                 <p class="tab-pane__category yel_line"><%=typeList[(Timenews[3].type-1)] %></p>
-                                <a class="tab-pane__title"><%= Timenews[3].name%></a>
+                                <a class="tab-pane__title" href="/news?name=<%= Timenews[3].name%>"><%= Timenews[3].name%></a>
                                 <p class="tab-pane__text"> </p>
                             </div>
                         </div>
