--- a/views/category.ejs
+++ b/views/category.ejs
@@ -224,7 +224,7 @@
                               </a>
                           </div>
                           <div class="posted">
-                              <span class="posted__date">${news.time}</span>
+                              <span class="posted__date">${news.time.substring(0,10)}</span>
                               <ul class="posted__icon">
                                   <li>
                                       <span>
@@ -251,7 +251,7 @@
                           <p class="news__desc">${typenews[0].name}${typenews[0].name}</p>
                       </div>
                       <div class="posted">
-                          <span class="posted__date">${typenews[0].time}</span>
+                          <span class="posted__date">${typenews[0].time.substring(0,10)}</span>
                           <ul class="posted__icon">
                               <li>
                                   <span>
