--- a/views/index.ejs
+++ b/views/index.ejs
@@ -279,6 +279,12 @@
             $(".sign").hide();
             $(".logout").show();
             $(".userName").text("hello,"+user.name);
+            let secreturl=['/upload','/examine'];
+            if(user.authority){
+              $(".userName").on('click', function(event) {
+                location.href = secreturl[user.authority-1];
+              });
+            }
           }
           for(var e=0;e<4;e++){
             $('.tab-pane__category').eq(e).append(timenews[e].time.substring(0,10));
